--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
     <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
   </div>
 </section>
+  <section id="skills">
+  <h2>Skills & Tools</h2>
+  <div class="badge">HTML</div>
+  <div class="badge">CSS</div>
+  <div class="badge">JavaScript</div>
+  <div class="badge">GitHub</div>
+</section>
+
 
 <nav>
   <ul>
