--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
   <section id="projects">
   <h2>Featured Projects</h2>
   <div class="project-card">
+    <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
     <h3>My Projects – Lina Mokoena</h3>
     <p>Interactive portfolio built with HTML, CSS, and JavaScript. Includes fade-in effects and responsive styling.</p>
     <p><strong>Tools:</strong> VS Code, GitHub Pages</p>
   </div>
 
   <div class="project-card">
+    <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
     <h3>IT Empowerment Kit (Concept)</h3>
     <p>A starter toolkit idea for SMEs and schools—custom laptop branding + learning portal + offline support tools.</p>
     <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
