--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lina Mokoena Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#certifications">Certifications</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Header -->
   <header>
     <h1>Lina Mokoena</h1>
     <p>IT Support Specialist • Cloud Learner • Technical Problem-Solver</p>
   </header>
 
+  <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
     <p>I'm a hands-on support specialist with a passion for solving tech problems, automating workflows, and learning by building. With over 6 years of IT experience across major brands, I thrive where systems meet people.</p>
   </section>
 
+  <!-- Experience Section -->
   <section id="experience">
     <h2>Experience</h2>
     <ul>
@@ -26,52 +41,45 @@
     </ul>
   </section>
 
+  <!-- Certifications Section -->
   <section id="certifications">
     <h2>Certifications & Learning</h2>
     <p>MCSA • MCITP • MCA • Networking Systems Diploma (A+, N+, Security+, Cisco)</p>
   </section>
 
+  <!-- Projects Section -->
   <section id="projects">
-  <h2>Featured Projects</h2>
-  <div class="project-card">
-    <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
-    <h3>My Projects – Lina Mokoena</h3>
-    <p>Interactive portfolio built with HTML, CSS, and JavaScript. Includes fade-in effects and responsive styling.</p>
-    <p><strong>Tools:</strong> VS Code, GitHub Pages</p>
-  </div>
+    <h2>Featured Projects</h2>
 
-  <div class="project-card">
-    <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
-    <h3>IT Empowerment Kit (Concept)</h3>
-    <p>A starter toolkit idea for SMEs and schools—custom laptop branding + learning portal + offline support tools.</p>
-    <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
-  </div>
-</section>
+    <div class="project-card">
+      <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
+      <h3>My Projects – Lina Mokoena</h3>
+      <p>Interactive portfolio built with HTML, CSS, and JavaScript. Includes fade-in effects and responsive styling.</p>
+      <p><strong>Tools:</strong> VS Code, GitHub Pages</p>
+    </div>
+
+    <div class="project-card">
+      <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
+      <h3>IT Empowerment Kit (Concept)</h3>
+      <p>A starter toolkit idea for SMEs and schools—custom laptop branding + learning portal + offline support tools.</p>
+      <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
   <section id="skills">
-  <h2>Skills & Tools</h2>
-  <div class="badge">HTML</div>
-  <div class="badge">CSS</div>
-  <div class="badge">JavaScript</div>
-  <div class="badge">GitHub</div>
-</section>
+    <h2>Skills & Tools</h2>
+    <div class="badge">HTML</div>
+    <div class="badge">CSS</div>
+    <div class="badge">JavaScript</div>
+    <div class="badge">GitHub</div>
+  </section>
 
-
-<nav>
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#experience">Experience</a></li>
-    <li><a href="#certifications">Certifications</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
-
-
-  <footer>
+  <!-- Footer / Contact -->
+  <footer id="contact">
     <p>Get in touch: ntomblinah@gmail.com</p>
   </footer>
 
   <script src="script.js"></script>
-<script src="script.js"></script>
 </body>
 </html>
