--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
+<!-- Rotating Flower -->
+<div class="flower-container">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Iconic_flower.svg/1024px-Iconic_flower.svg.png" class="flower" alt="Flower" />
+</div>
+<!-- Bubble Container -->
+<div class="bubble-container">
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+</div>
 
   <!-- Header -->
   <header>
