--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
 <!-- Rotating Flower -->
 <div class="flower-container">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Iconic_flower.svg/1024px-Iconic_flower.svg.png" class="flower" alt="Flower" />
+  <img src="https://t4.ftcdn.net/jpg/09/57/68/29/360_F_957682926_W86OazmeoKooydQTIoQfXbd2uomR8Bc9.jpg" class="flower" alt="Flower" />
 </div>
 <!-- Bubble Container -->
 <div class="bubble-container">
