--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
   <title>Lina Mokoena Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body id="top">
 
-  <!-- Navigation Bar -->
+  <!-- Navigation -->
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#certifications">Certifications</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Bubble Container -->
+  <!-- Floating Bubbles -->
   <div class="bubble-container">
     <div class="bubble"></div>
     <div class="bubble"></div>
@@ -37,7 +38,11 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm a hands-on support specialist with a passion for solving tech problems, automating workflows, and learning by building. With over 6 years of IT experience across major brands, I thrive where systems meet people.</p>
+    <p>
+      I'm a hands-on support specialist with a passion for solving tech problems,
+      automating workflows, and learning by building. With over 6 years of IT experience
+      across major brands, I thrive where systems meet people.
+    </p>
   </section>
 
   <!-- Experience Section -->
@@ -53,7 +58,9 @@
   <!-- Certifications Section -->
   <section id="certifications">
     <h2>Certifications & Learning</h2>
-    <p>MCSA • MCITP • MCA • Networking Systems Diploma (A+, N+, Security+, Cisco)</p>
+    <p>
+      MCSA • MCITP • MCA • Networking Systems Diploma (A+, N+, Security+, Cisco)
+    </p>
   </section>
 
   <!-- Projects Section -->
@@ -63,14 +70,20 @@
     <div class="project-card">
       <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
       <h3>My Projects – Lina Mokoena</h3>
-      <p>Interactive portfolio built with HTML, CSS, and JavaScript. Includes fade-in effects and responsive styling.</p>
+      <p>
+        Interactive portfolio built with HTML, CSS, and JavaScript. Includes fade-in effects
+        and responsive styling.
+      </p>
       <p><strong>Tools:</strong> VS Code, GitHub Pages</p>
     </div>
 
     <div class="project-card">
       <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
       <h3>IT Empowerment Kit (Concept)</h3>
-      <p>A starter toolkit idea for SMEs and schools—custom laptop branding + learning portal + offline support tools.</p>
+      <p>
+        A starter toolkit idea for SMEs and schools—custom laptop branding +
+        learning portal + offline support tools.
+      </p>
       <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
     </div>
   </section>
@@ -84,11 +97,12 @@
     <div class="badge">GitHub</div>
   </section>
 
-  <!-- Footer / Contact -->
+  <!-- Footer -->
   <footer id="contact">
     <p>Get in touch: ntomblinah@gmail.com</p>
   </footer>
 
+  <!-- Scroll Animation & Bubbles -->
   <script src="script.js"></script>
 </body>
 </html>
