--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 
   <!-- Header -->
   <header>
-    <h1>Lina Mokoena</h1>
-    <p>IT Support Specialist • Cloud Learner • Technical Problem-Solver</p>
-  </header>
-
+  <h1>Lina Ntombi Mokoena</h1>
+  <p>Systems Thinker • Digital Explorer • Career Multitool</p>
+</header>
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
