--- a/index.html
+++ b/index.html
@@ -35,14 +35,19 @@
   <p>Systems Thinker • Digital Explorer • Career Multitool</p>
 </header>
   <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I'm a hands-on support specialist with a passion for solving tech problems,
-      automating workflows, and learning by building. With over 6 years of IT experience
-      across major brands, I thrive where systems meet people.
-    </p>
-  </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    My name is Lina Ntombi Mokoena. I’ve operated heavy mining machinery, built onboarding systems in IT, managed customer care in publishing, and provided tech support for global brands. Through it all, one truth has remained: I solve problems with systems, empathy, and persistence.
+  </p>
+  <p>
+    Today, I’m charting a new chapter as a cloud solutions learner, web developer-in-training, and digital strategy explorer. I'm driven by curiosity and a belief that technology can transform lives. This site is my living lab—where I test, break, fix, learn, and grow.
+  </p>
+  <p>
+    Welcome to my journey. It's not linear. But it’s mine.
+  </p>
+</section>
+
 
   <!-- Experience Section -->
   <section id="experience">
