--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
+      <li><a href="#journey">My Journey</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#certifications">Certifications</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#skills">Skills</a></li>
+      <li><a href="#building">What I'm Building</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -29,27 +31,39 @@
     <div class="bubble"></div>
   </div>
 
-  <!-- Header -->
+  <!-- Header / Hero -->
   <header>
-  <h1>Lina Ntombi Mokoena</h1>
-  <p>Systems Thinker • Digital Explorer • Career Multitool</p>
-</header>
-  <!-- About Section -->
-<section id="about">
-  <h2>About Me</h2>
-  <p>
-    My name is Lina Ntombi Mokoena. I’ve operated heavy mining machinery, built onboarding systems in IT, managed customer care in publishing, and provided tech support for global brands. Through it all, one truth has remained: I solve problems with systems, empathy, and persistence.
-  </p>
-  <p>
-    Today, I’m charting a new chapter as a cloud solutions learner, web developer-in-training, and digital strategy explorer. I'm driven by curiosity and a belief that technology can transform lives. This site is my living lab—where I test, break, fix, learn, and grow.
-  </p>
-  <p>
-    Welcome to my journey. It's not linear. But it’s mine.
-  </p>
-</section>
+    <h1>Lina Ntombi Mokoena</h1>
+    <p>Systems Thinker • Digital Explorer • Career Multitool</p>
+  </header>
 
+  <!-- About Me -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I’ve operated mining drills, built onboarding systems, managed customer support, and supported global IT networks. My path hasn’t been linear—but it’s been rich with lessons. I solve problems with logic, empathy, and curiosity.
+    </p>
+    <p>
+      Today, I’m pivoting into cloud architecture, frontend development, and digital strategy—bringing experience, resilience, and a desire to build tech that works for people.
+    </p>
+    <p>
+      Welcome to my digital lab: this portfolio captures my growth, experiments, and creative journey.
+    </p>
+  </section>
 
-  <!-- Experience Section -->
+  <!-- Visual Career Timeline / Journey -->
+  <section id="journey">
+    <h2>My Journey</h2>
+    <ul>
+      <li><strong>2011–2012:</strong> Publishing + Digital Ad Support (Junk Mail)</li>
+      <li><strong>2013–2014:</strong> First-Line Technical Support & System Monitoring</li>
+      <li><strong>2015–2022:</strong> IT Support roles across automotive, mining, and consumer sectors</li>
+      <li><strong>2023–2025:</strong> Deepening into desktop engineering, onboarding automation, and IT optimization</li>
+      <li><strong>Now:</strong> Expanding into frontend development, cloud technologies, and digital empowerment concepts</li>
+    </ul>
+  </section>
+
+  <!-- Experience -->
   <section id="experience">
     <h2>Experience</h2>
     <ul>
@@ -59,54 +73,76 @@
     </ul>
   </section>
 
-  <!-- Certifications Section -->
+  <!-- Certifications -->
   <section id="certifications">
     <h2>Certifications & Learning</h2>
-    <p>
-      MCSA • MCITP • MCA • Networking Systems Diploma (A+, N+, Security+, Cisco)
-    </p>
+    <p>MCSA • MCITP • MCA • Diploma in Information Systems (CTI)</p>
+    <p>Networking Systems Diploma In Progress — Boston City Campus (A+, N+, Security+, Cisco)</p>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Featured Projects -->
   <section id="projects">
     <h2>Featured Projects</h2>
 
     <div class="project-card">
       <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
       <h3>My Projects – Lina Mokoena</h3>
-      <p>
-        Interactive portfolio built with HTML, CSS, and JavaScript. Includes fade-in effects
-        and responsive styling.
-      </p>
+      <p>Personal portfolio that grows with me. Built using HTML, CSS, and JavaScript with responsive design and motion effects.</p>
       <p><strong>Tools:</strong> VS Code, GitHub Pages</p>
-    </div>
-
-    <div class="project-card">
-      <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
-      <h3>IT Empowerment Kit (Concept)</h3>
-      <p>
-        A starter toolkit idea for SMEs and schools—custom laptop branding +
-        learning portal + offline support tools.
-      </p>
-      <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
     </div>
   </section>
 
-  <!-- Skills Section -->
+  <!-- Skills & Tools Grouped -->
   <section id="skills">
     <h2>Skills & Tools</h2>
+
+    <h3>🌐 Frontend & Development</h3>
     <div class="badge">HTML</div>
     <div class="badge">CSS</div>
     <div class="badge">JavaScript</div>
     <div class="badge">GitHub</div>
+    <div class="badge">VS Code</div>
+
+    <h3>☁️ Cloud & Productivity</h3>
+    <div class="badge">Office 365</div>
+    <div class="badge">Microsoft Intune</div>
+    <div class="badge">Active Directory</div>
+    <div class="badge">MS Teams</div>
+    <div class="badge">OneDrive</div>
+
+    <h3>🛠️ Support Systems</h3>
+    <div class="badge">SAP</div>
+    <div class="badge">Citrix</div>
+    <div class="badge">MANCAT</div>
+    <div class="badge">Remote Desktop</div>
+    <div class="badge">Ticketing Systems</div>
+
+    <h3>📢 Digital Strategy</h3>
+    <div class="badge">Canva</div>
+    <div class="badge">Google Ads</div>
+    <div class="badge">Facebook Campaigns</div>
+    <div class="badge">CRM Coordination</div>
+    <div class="badge">OpenX Enterprise</div>
+  </section>
+
+  <!-- What I'm Building -->
+  <section id="building">
+    <h2>What I'm currently Building Next</h2>
+    <ul>
+      <li>A responsive portfolio that reflects my full career arc — not just tech skills</li>
+      <li>Frontend micro-projects with animation, interactivity, and form validation</li>
+      <li>Airtable-based digital funnels for testing user experience</li>
+      <li>Cloud labs & sandbox ideas from my Cisco/Network+ coursework</li>
+    </ul>
   </section>
 
   <!-- Footer -->
   <footer id="contact">
     <p>Get in touch: ntomblinah@gmail.com</p>
+    <p>Find me on LinkedIn or explore my GitHub for more concepts.</p>
   </footer>
 
-  <!-- Scroll Animation & Bubbles -->
+  <!-- JS Scroll Animation -->
   <script src="script.js"></script>
 </body>
 </html>
