--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
   </nav>
 
-  <!-- Floating Bubbles -->
+  <!-- Bubbles -->
   <div class="bubble-container">
     <div class="bubble"></div>
     <div class="bubble"></div>
@@ -31,7 +31,7 @@
     <div class="bubble"></div>
   </div>
 
-  <!-- Header / Hero -->
+  <!-- Hero Header -->
   <header>
     <h1>Lina Ntombi Mokoena</h1>
     <p>Systems Thinker • Digital Explorer • Career Multitool</p>
@@ -40,26 +40,20 @@
   <!-- About Me -->
   <section id="about">
     <h2>About Me</h2>
-    <p>
-      I’ve operated mining drills, built onboarding systems, managed customer support, and supported global IT networks. My path hasn’t been linear—but it’s been rich with lessons. I solve problems with logic, empathy, and curiosity.
-    </p>
-    <p>
-      Today, I’m pivoting into cloud architecture, frontend development, and digital strategy—bringing experience, resilience, and a desire to build tech that works for people.
-    </p>
-    <p>
-      Welcome to my digital lab: this portfolio captures my growth, experiments, and creative journey.
-    </p>
+    <p>I’ve operated mining drills, built onboarding systems, managed customer support, and supported global IT networks. My path hasn’t been linear—but it’s been rich with lessons. I solve problems with logic, empathy, and curiosity.</p>
+    <p>Today, I’m pivoting into cloud architecture, frontend development, and digital strategy—bringing experience, resilience, and a desire to build tech that works for people.</p>
+    <p>Welcome to my digital lab: this portfolio captures my growth, experiments, and creative journey.</p>
   </section>
 
-  <!-- Visual Career Timeline / Journey -->
+  <!-- Journey Timeline -->
   <section id="journey">
     <h2>My Journey</h2>
     <ul>
       <li><strong>2011–2012:</strong> Publishing + Digital Ad Support (Junk Mail)</li>
       <li><strong>2013–2014:</strong> First-Line Technical Support & System Monitoring</li>
       <li><strong>2015–2022:</strong> IT Support roles across automotive, mining, and consumer sectors</li>
-      <li><strong>2023–2025:</strong> Deepening into desktop engineering, onboarding automation, and IT optimization</li>
-      <li><strong>Now:</strong> Expanding into frontend development, cloud technologies, and digital empowerment concepts</li>
+      <li><strong>2023–2025:</strong> Desktop engineering, onboarding automation, and IT optimization</li>
+      <li><strong>Now:</strong> Frontend development, cloud technologies, and digital empowerment concepts</li>
     </ul>
   </section>
 
@@ -80,44 +74,51 @@
     <p>Networking Systems Diploma In Progress — Boston City Campus (A+, N+, Security+, Cisco)</p>
   </section>
 
-  <!-- Featured Projects -->
+  <!-- Projects -->
   <section id="projects">
     <h2>Featured Projects</h2>
 
     <div class="project-card">
       <a href="https://github.com/ntomblinah/lina-portfolio" target="_blank" class="btn">View on GitHub</a>
       <h3>My Projects – Lina Mokoena</h3>
-      <p>Personal portfolio that grows with me. Built using HTML, CSS, and JavaScript with responsive design and motion effects.</p>
+      <p>Personal portfolio that grows with me. Built with HTML, CSS, and JavaScript, featuring motion, responsiveness, and UI/UX storytelling.</p>
       <p><strong>Tools:</strong> VS Code, GitHub Pages</p>
+    </div>
+
+    <div class="project-card">
+      <a href="#" class="btn">Read Concept</a>
+      <h3>Digital Empowerment Kit</h3>
+      <p>A toolkit concept for SMEs and schools: white-label laptops, learning portals, and offline support tools.</p>
+      <p><strong>Tools:</strong> Canva, Airtable, PowerPoint, supplier outreach</p>
     </div>
   </section>
 
-  <!-- Skills & Tools Grouped -->
+  <!-- Skills -->
   <section id="skills">
     <h2>Skills & Tools</h2>
 
-    <h3>🌐 Frontend & Development</h3>
+    <h3>Frontend Development</h3>
     <div class="badge">HTML</div>
     <div class="badge">CSS</div>
     <div class="badge">JavaScript</div>
     <div class="badge">GitHub</div>
     <div class="badge">VS Code</div>
 
-    <h3>☁️ Cloud & Productivity</h3>
+    <h3>Cloud & Productivity</h3>
     <div class="badge">Office 365</div>
     <div class="badge">Microsoft Intune</div>
     <div class="badge">Active Directory</div>
     <div class="badge">MS Teams</div>
     <div class="badge">OneDrive</div>
 
-    <h3>🛠️ Support Systems</h3>
+    <h3>Support & Systems</h3>
     <div class="badge">SAP</div>
     <div class="badge">Citrix</div>
     <div class="badge">MANCAT</div>
     <div class="badge">Remote Desktop</div>
     <div class="badge">Ticketing Systems</div>
 
-    <h3>📢 Digital Strategy</h3>
+    <h3>Digital Strategy</h3>
     <div class="badge">Canva</div>
     <div class="badge">Google Ads</div>
     <div class="badge">Facebook Campaigns</div>
@@ -127,22 +128,23 @@
 
   <!-- What I'm Building -->
   <section id="building">
-    <h2>What I'm currently Building Next</h2>
+    <h2>What I'm Building Next</h2>
     <ul>
-      <li>A responsive portfolio that reflects my full career arc — not just tech skills</li>
-      <li>Frontend micro-projects with animation, interactivity, and form validation</li>
-      <li>Airtable-based digital funnels for testing user experience</li>
-      <li>Cloud labs & sandbox ideas from my Cisco/Network+ coursework</li>
+      <li>A responsive portfolio that reflects my full career arc</li>
+      <li>Micro-projects with animation, interactivity, and validation</li>
+      <li>Cloud labs and sandbox experiments (Cisco, Network+)</li>
+      <li>Airtable-based funnels and journey mapping tools</li>
+      <li>Process documents for digital empowerment kits</li>
     </ul>
   </section>
 
-  <!-- Footer -->
+  <!-- Contact -->
   <footer id="contact">
     <p>Get in touch: ntomblinah@gmail.com</p>
-    <p>Find me on LinkedIn or explore my GitHub for more concepts.</p>
+    <p>Find me on LinkedIn or GitHub for future updates.</p>
   </footer>
 
-  <!-- JS Scroll Animation -->
+  <!-- Scripts -->
   <script src="script.js"></script>
 </body>
 </html>
